# opensourcellmrouter

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  config.example.toml  config.ollama.toml  config.toml  demo.sh  install-service.sh  launch-coding-agent.sh  release.sh  uninstall-service.sh
.github/workflows/: ci.yml  publish.yml
docs/: README.md  classifiers.md  coding-agents.md  examples.md  plugins.md  providers.md  routers.md  security.md  structured-outputs.md  telemetry.md
src/: canonical.rs  config.rs  logging.rs  main.rs  provider.rs  router.rs  server.rs  tui.rs  watch.rs
src/classifiers/: keyword.rs  mod.rs  refusal.rs
src/formats/: anthropic.rs  mod.rs  ollama.rs  openai.rs  responses.rs
src/plugins/: mod.rs  pareto_router.rs  pdf_input.rs  response_healing.rs  web_search.rs
static/: dashboard.html
